# Multi-agent-task-solver

./: main.py  pyproject.toml
backend/: .env.example  .gitignore  README.md  examples.py  main.py  pyproject.toml
backend/notebooks/: multi_agent.ipynb
backend/src/: __init__.py
backend/src/agents/: __init__.py  graph.py  nodes.py  routing.py
backend/src/config/: settings.py  state.py
backend/src/prompts/: __init__.py  templates.py
backend/src/tools/: __init__.py  search.py  visualization.py
backend/src/utils/: __init__.py  helpers.py
srs_documentation/: AI focused Backend Engineer.txt  Multi_agent_wand_ai.excalidraw
